added game link to layout

--- a/HtmlJavaScriptPort/Pages/Shared/_Layout.cshtml
+++ b/HtmlJavaScriptPort/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - HtmlJavaScriptPort</title>
+    <title>@ViewData["Title"] - CorruptionOfChampions</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/HtmlJavaScriptPort.styles.css" asp-append-version="true" />
@@ -21,6 +21,10 @@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            @*<a class="nav-link text-dark" asp-area="" asp-page="/coc">Play HTML Port</a>*@
+                            <a class="nav-link text-dark" href="~/Corruption-of-Champions-HTML/coc.html">Play HTML Port</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
