archive script tweaks

--- a/HtmlTypeScriptPort/Pages/coc.cshtml
+++ b/HtmlTypeScriptPort/Pages/coc.cshtml
@@ -83,109 +83,105 @@
 
 <!--Additional APIs-->
 <!-- ### ENGINE ### -->
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/engine/gui.js"></script>
-@* <script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/engine/text.js"></script> *@
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/engine/utils.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/engine/input.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/engine/saves.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/engine/time.js"></script>
+<script type="module" src="js/corruption-of-champions/models/body-parts/assClass.js"></script>
+<script type="module" src="js/corruption-of-champions/models/body-parts/breastRowClass.js"></script>
+<script type="module" src="js/corruption-of-champions/models/body-parts/cockClass.js"></script>
+<script type="module" src="js/corruption-of-champions/models/body-parts/vaginaClass.js"></script>
 
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/flags/dataFlags.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/flags/legacyFlags.js"></script>
+<script type="module" src="js/corruption-of-champions/engine/gui.js"></script>
+@* <script type="module" src="js/corruption-of-champions/engine/text.js"></script> *@
+<script type="module" src="js/corruption-of-champions/engine/utils.js"></script>
+<script type="module" src="js/corruption-of-champions/engine/input.js"></script>
+<script type="module" src="js/corruption-of-champions/engine/saves.js"></script>
+<script type="module" src="js/corruption-of-champions/engine/time.js"></script>
 
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/appearanceEnums.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/appearance.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/assClass.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/pregnancy.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/pregnancyProgression.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/breastRowClass.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/cockClass.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/vaginaClass.js"></script>
+<script type="module" src="js/corruption-of-champions/flags/dataFlags.js"></script>
+<script type="module" src="js/corruption-of-champions/flags/legacyFlags.js"></script>
 
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/itemClass.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/keyItemClass.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/keyItemLib.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/itemConstructors.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/itemSlotClass.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/perkClass.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/perkLib.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/perkBuildMenu.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/statusEffectClass.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/statusEffectLib.js"></script>
+<script type="module" src="js/corruption-of-champions/appearanceEnums.js"></script>
+<script type="module" src="js/corruption-of-champions/appearance.js"></script>
+<script type="module" src="js/corruption-of-champions/pregnancy.js"></script>
+<script type="module" src="js/corruption-of-champions/pregnancyProgression.js"></script>
 
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/globalVariables.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/main.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/playerInfo.js"></script>
+<script type="module" src="js/corruption-of-champions/itemClass.js"></script>
+<script type="module" src="js/corruption-of-champions/keyItemClass.js"></script>
+<script type="module" src="js/corruption-of-champions/keyItemLib.js"></script>
+<script type="module" src="js/corruption-of-champions/itemConstructors.js"></script>
+<script type="module" src="js/corruption-of-champions/itemSlotClass.js"></script>
+<script type="module" src="js/corruption-of-champions/perkClass.js"></script>
+<script type="module" src="js/corruption-of-champions/perkLib.js"></script>
+<script type="module" src="js/corruption-of-champions/perkBuildMenu.js"></script>
+<script type="module" src="js/corruption-of-champions/statusEffectClass.js"></script>
+<script type="module" src="js/corruption-of-champions/statusEffectLib.js"></script>
 
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/scenes/inventory.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/scenes/combat.js"></script>
-@* <script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/scenes/combatSpecial.js"></script> *@
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/scenes/combatTeases.js"></script>
+<script type="module" src="js/corruption-of-champions/scenes/inventory.js"></script>
+<script type="module" src="js/corruption-of-champions/scenes/combat.js"></script>
+@* <script type="module" src="js/corruption-of-champions/scenes/combatSpecial.js"></script> *@
+<script type="module" src="js/corruption-of-champions/scenes/combatTeases.js"></script>
 <!-- ### ITEMS ### -->
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/items/weapons.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/items/armor.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/items/materials.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/items/consumableEffects.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/items/transformationEffects.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/items/consumables.js"></script>
+<script type="module" src="js/corruption-of-champions/items/weapons.js"></script>
+<script type="module" src="js/corruption-of-champions/items/armor.js"></script>
+<script type="module" src="js/corruption-of-champions/items/materials.js"></script>
+<script type="module" src="js/corruption-of-champions/items/consumableEffects.js"></script>
+<script type="module" src="js/corruption-of-champions/items/transformationEffects.js"></script>
+<script type="module" src="js/corruption-of-champions/items/consumables.js"></script>
 
 <!--Core entities-->
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/creature.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/player.js"></script>
+<script type="module" src="js/corruption-of-champions/creature.js"></script>
+<script type="module" src="js/corruption-of-champions/player.js"></script>
 
 <!-- ### SCENES ### -->
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/scenes/intro.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/scenes/camp.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/scenes/exploration.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/scenes/places.js"></script>
+<script type="module" src="js/corruption-of-champions/scenes/intro.js"></script>
+<script type="module" src="js/corruption-of-champions/scenes/camp.js"></script>
+<script type="module" src="js/corruption-of-champions/scenes/exploration.js"></script>
+<script type="module" src="js/corruption-of-champions/scenes/places.js"></script>
 
 <!--Areas-->
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/scenes/areas/forest.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/scenes/areas/forest/beeGirl.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/scenes/areas/forest/tamani.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/scenes/areas/forest/tentacleBeast.js"></script>
+<script type="module" src="js/corruption-of-champions/scenes/areas/forest.js"></script>
+<script type="module" src="js/corruption-of-champions/scenes/areas/forest/beeGirl.js"></script>
+<script type="module" src="js/corruption-of-champions/scenes/areas/forest/tamani.js"></script>
+<script type="module" src="js/corruption-of-champions/scenes/areas/forest/tentacleBeast.js"></script>
 
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/scenes/areas/lake.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/scenes/areas/lake/callu.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/scenes/areas/lake/gooGirl.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/scenes/areas/lake/greenSlime.js"></script>
+<script type="module" src="js/corruption-of-champions/scenes/areas/lake.js"></script>
+<script type="module" src="js/corruption-of-champions/scenes/areas/lake/callu.js"></script>
+<script type="module" src="js/corruption-of-champions/scenes/areas/lake/gooGirl.js"></script>
+<script type="module" src="js/corruption-of-champions/scenes/areas/lake/greenSlime.js"></script>
 
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/scenes/areas/desert.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/scenes/areas/desert/sandWitch.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/scenes/areas/desert/marcusLucia.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/scenes/areas/desert/naga.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/scenes/areas/desert/sandTrap.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/scenes/areas/desert/oasis.js"></script>
+<script type="module" src="js/corruption-of-champions/scenes/areas/desert.js"></script>
+<script type="module" src="js/corruption-of-champions/scenes/areas/desert/sandWitch.js"></script>
+<script type="module" src="js/corruption-of-champions/scenes/areas/desert/marcusLucia.js"></script>
+<script type="module" src="js/corruption-of-champions/scenes/areas/desert/naga.js"></script>
+<script type="module" src="js/corruption-of-champions/scenes/areas/desert/sandTrap.js"></script>
+<script type="module" src="js/corruption-of-champions/scenes/areas/desert/oasis.js"></script>
 
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/scenes/areas/mountain.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/scenes/areas/mountain/hellhound.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/scenes/areas/mountain/minotaur.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/scenes/areas/mountain/wormmass.js"></script>
+<script type="module" src="js/corruption-of-champions/scenes/areas/mountain.js"></script>
+<script type="module" src="js/corruption-of-champions/scenes/areas/mountain/hellhound.js"></script>
+<script type="module" src="js/corruption-of-champions/scenes/areas/mountain/minotaur.js"></script>
+<script type="module" src="js/corruption-of-champions/scenes/areas/mountain/wormmass.js"></script>
 
 <!--Places-->
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/scenes/places/farm.js"></script>
-@* <script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/scenes/places/farm/kelt.js"></script> *@
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/scenes/places/farm/whitney.js"></script>
+<script type="module" src="js/corruption-of-champions/scenes/places/farm.js"></script>
+@* <script type="module" src="js/corruption-of-champions/scenes/places/farm/kelt.js"></script> *@
+<script type="module" src="js/corruption-of-champions/scenes/places/farm/whitney.js"></script>
 
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/scenes/places/townruins.js"></script>
+<script type="module" src="js/corruption-of-champions/scenes/places/townruins.js"></script>
 
 <!--Generic Monsters-->
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/scenes/monsters/goblin.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/scenes/monsters/imp.js"></script>
+<script type="module" src="js/corruption-of-champions/scenes/monsters/goblin.js"></script>
+<script type="module" src="js/corruption-of-champions/scenes/monsters/imp.js"></script>
 
 <!--NPCs-->
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/scenes/npcs/giacomo.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/scenes/npcs/jojo.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/scenes/npcs/lumi.js"></script>
-<!--script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/scenes/npcs/marble.js"></script-->
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/scenes/npcs/rathazul.js"></script>
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/scenes/npcs/amily.js"></script>
+<script type="module" src="js/corruption-of-champions/scenes/npcs/giacomo.js"></script>
+<script type="module" src="js/corruption-of-champions/scenes/npcs/jojo.js"></script>
+<script type="module" src="js/corruption-of-champions/scenes/npcs/lumi.js"></script>
+<!--script type="module" src="js/corruption-of-champions/scenes/npcs/marble.js"></script-->
+<script type="module" src="js/corruption-of-champions/scenes/npcs/rathazul.js"></script>
+<script type="module" src="js/corruption-of-champions/scenes/npcs/amily.js"></script>
 
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/scenes/campEvents.js"></script>
+<script type="module" src="js/corruption-of-champions/scenes/campEvents.js"></script>
 
-<script type="text/javascript" src="~/dist/Corruption-of-Champions-HTML/ts/debug.js"></script>
+<script type="module" src="js/corruption-of-champions/debug.js"></script>
 
-<script>
-    //Start the game!
-    mainMenu();
-</script>
+<script type="module" src="js/corruption-of-champions/playerInfo.js"></script>
+<script type="module" src="js/corruption-of-champions/globalVariables.js"></script>
+<script type="module" src="js/corruption-of-champions/main.js"></script>
